Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-59564

sigar should not try to acquire SE_DEBUG_NAME privilege

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 7.2.4
    • 7.6.0, 7.2.4
    • sigar
    • Untriaged
    • Windows 64-bit
    • 0
    • Unknown

    Description

      From the documentation for the privilege:

          

              Required to debug and adjust the memory of a process owned by another account.

              User Right: Debug programs.

       

      Given that we only want to look at "our own" processes we don't need (and should not try to acquire) the privilege.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            trond Trond Norbye
            trond Trond Norbye
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty