MB-59564: [WIN32] Don't enable SE_DEBUG_NAME privilege

From the docs:

    Required to debug and adjust the memory of a process owned
    by another account.
    User Right: Debug programs.

sigar should only look at processes from the same user

Change-Id: I348685cca96bca15f0f300a8c4388309d36b9c89
Reviewed-on: https://review.couchbase.org/c/sigar/+/200491
Well-Formed: Restriction Checker
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Vesko Karaganev <vesko.karaganev@couchbase.com>